# square_database_structure

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yaml  pytest.yaml
square_database_structure/: __init__.py  create_database.py  main.py
square_database_structure/square/: __init__.py
square_database_structure/square/authentication/: __init__.py  enums.py  tables.py
square_database_structure/square/email/: __init__.py  data.py  enums.py  tables.py
square_database_structure/square/file_storage/: __init__.py  tables.py
square_database_structure/square/file_storage/stored_procedures_and_functions/: __init__.py  get_file_count.sql
square_database_structure/square/greeting/: __init__.py  tables.py
square_database_structure/square/public/: __init__.py  data.py  enums.py  tables.py
square_database_structure/square/public/stored_procedures_and_functions/: get_test_text.sql
tests/: conftest.py  test_1.py  test_main.py
